--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,27 +1,10 @@
 
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+
 $font-family-serif: Lora, serif;
 $font-family-base: $font-family-serif;
 
 @import "~bootstrap/scss/bootstrap";
-
-@import "Home";
-
-//
-//html,
-//body {
-//  padding: 0;
-//  margin: 0;
-//  font-family: Lora, serif;
-//}
-//
-//a {
-//  color: inherit;
-//  text-decoration: none;
-//}
-//
-//* {
-//  box-sizing: border-box;
-//}
 
 html, body, #__next {
   height: 100%;
@@ -31,3 +14,5 @@ body, #__next {
   display: flex;
   flex-direction: column;
 }
+
+@import "Home";
