--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,11 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-$font-family-serif: Lora, serif;
+$font-family-serif: "DM Sans", sans-serif;;
 $font-family-base: $font-family-serif;
 
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.scss";
 
 html, body, #__next {
   height: 100%;
